# sly_controller_node

./: CMakeLists.txt  package.xml
include/sly_controller/: motor.hpp  sly_controller.hpp  sly_controller_node.hpp  sly_estimator.hpp
launch/: sly_bringup.launch.py  sly_gazebo.launch.py
log/: latest_build
src/: lifecyle_manager.cpp  motor.cpp  sly_controller.cpp  sly_controller_node.cpp  sly_estimator.cpp
test/: sly_controller_test.cpp
